--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,23 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "emoji-picker-react": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.3",
+    "socket.io-client": "^4.5.1",
+    "styled-components": "^5.3.5",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:5000"
+  },
+  "proxy": "http://localhost:5000"
 }
