--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "semantic-ui-react": "^2.1.3",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
     "uuid": "^8.3.2",
