--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.35",
+    "@mui/lab": "^5.0.0-alpha.92",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "emoji-picker-react": "^3.5.1",
+    "framer-motion": "^6.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-input-multiline": "^0.3.1",
     "react-loader-spinner": "^5.1.5",
+    "react-loading-icons": "^1.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.1",
     "semantic-ui-react": "^2.1.3",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
