--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-alpha.35",
     "@mui/lab": "^5.0.0-alpha.92",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,9 +24,12 @@
     "react-loader-spinner": "^5.1.5",
     "react-loading-icons": "^1.1.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scrollable-feed": "^1.3.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "semantic-ui-react": "^2.1.3",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
